--- a/readit/template/base.html
+++ b/readit/template/base.html
@@ -27,6 +27,8 @@
            <nav>
               <a href="{% url 'books' %}">Books</a>
               <a href="{% url 'authors' %}">Authors</a>
+              <a href="{% url 'add-author' %}">Add Author</a>
+              <a href="{% url 'add-book' %}">Add Book</a>
            </nav>
  
            <main>
